Fix HTML encoding issues in intro.html

--- a/intro.html
+++ b/intro.html
@@ -12,8 +12,8 @@
   <header class="navbar">
     <h1 class="logo">Swim Mind</h1>
     <div class="nav-buttons">
-      <button class="btn secondary" onclick="goToLogin()">Login</button>
-      <button class="btn primary" onclick="goToSignup()">Sign Up</button>
+      <button class="btn login-btn" onclick="goToLogin()">Login</button>
+      <button class="btn signup-btn" onclick="goToSignup()">Sign Up</button>
     </div>
   </header>
 
