--- a/signup.html
+++ b/signup.html
@@ -5,18 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign Up - Swim Mind</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="login.css" />
 </head>
 <body>
-  <div class="login-card">
-    <h2>Create Account</h2>
-    <input type="text" placeholder="Choose Username" id="new-username" />
-    <input type="password" placeholder="Choose Password" id="new-password" />
-    <button onclick="signup()">Sign Up</button>
-    <div class="signup">
-      Already have an account? <a href="login.html">Login</a>
+  <header>
+    <h1 class="app-title">Swim Mind</h1>
+  </header>
+
+  <div class="card-container">
+    <div class="card" id="signup-card">
+      <h2>Create Account</h2>
+      <input type="text" placeholder="Choose Username" id="new-username" />
+      <input type="password" placeholder="Choose Password" id="new-password" />
+      <button class="btn" onclick="signup()">Sign Up</button>
+      <p id="signup-message" class="toggle-text"></p>
+      <p class="toggle-text">
+        Already have an account? <a href="login.html" class="link">Login</a>
+      </p>
     </div>
   </div>
+
+  <footer>
+    <p>© 2025 Swim Mind App | Track your emotions, strengthen your mind!</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
